# docs/swagger.json
@@ -28,6 +28,38 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "description": "Get List Channel",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "channels"
+                ],
+                "summary": "List Channel",
+                "parameters": [
+                    {
+                        "description": "body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_girakdev_girack-backend_controller_model.Channel"
+                        }
+                    }
+                }
             }
         },
         "/ping": {
